--- a/auth/package.json
+++ b/auth/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
+  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,5 +31,14 @@
     "mongoose": "^8.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/supertest": "^6.0.2",
+    "mongodb-memory-server": "^9.1.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
+
 }
