--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,5 +18,13 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
+         - path: /?(.*)
+           pathType: ImplementationSpecific
+           backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
+          
             
          
