--- a/auth/package.json
+++ b/auth/package.json
@@ -14,11 +14,11 @@
       "./src/test/setup.ts"
     ]
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ngirimanasc/common": "^1.0.4",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
@@ -32,7 +32,6 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
-  
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/supertest": "^6.0.2",
@@ -40,5 +39,4 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   }
-
 }
